2008-02-16  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* evolution/wscript:
	* gnomeapplet/wscript:
	* gnomedesktop/wscript:
	* gnomekeyring/wscript:
	* gnomeprint/wscript:
	* gtksourceview/wscript:
	* mediaprofiles/wscript:
	* metacity/wscript:
	* nautilusburn/wscript:
	* rsvg/wscript:
	* totem/wscript:
	* wnck/wscript:
	Fix waf scripts to build python extensions using the
	'plugin' object type.  This should fix the python modules for Mac
	OS X when using waf 1.3.2.

2008-02-16  Justin Mazzola Paluska

	* gnomekeyring/gnomekeyring.override
	(pygnome_keyring_attribute_list_as_pyobject): Bug 516788 –
	gnomekeyring: find_network_password_sync returns None instead of
	results.

2008-02-03  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* wscript (configure): Check for the 'gnome' tool first, to make
	python use LIBDIR (if running waf trunk).

=== 2.21.2 ===
2008-01-14  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* NEWS: Update.

	* configure.ac, wscript: Bump version to 2.21.2.

2008-01-05  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* evolution/ecal.defs,
	* evolution/evo-calendar.h,
	* evolution/evo-calendar.c (evo_cal_component_get_status),
	(evo_cal_component_set_status): Wrap get_set_status (#505305)

	* evolution/ebook.override:
	* evolution/ecal.override: Fix some compilation warnings.
	
	* evolution/wscript:
	* gnomeapplet/wscript:
	* gnomedesktop/wscript:
	* gnomekeyring/wscript:
	* gnomeprint/wscript:
	* gtksourceview/wscript:
	* mediaprofiles/wscript:
	* metacity/wscript:
	* nautilusburn/wscript:
	* rsvg/wscript:
	* totem/wscript:
	* wnck/wscript: Fix more WAF build problems.

2007-12-30  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* evolution/ebook.override:
	* evolution/evo-addressbook.c (evo_addressbook_remove_contact):
	* evolution/evo-addressbook.h:
	* evolution/evo-calendar.c (evo_cal_source_open_source),
	(evo_cal_source_open_new_with_absolute_uri),
	(evo_cal_source_print_all_objects, evo_cal_source_get_object):
	* evolution/evo-calendar.h: